# cpp_project_template

./: CMakeCache.txt  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
